<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Full Cleaner</string>
    <string name="lte_cleaner">Full Cleaner!</string>
    <string name="no_files_found">No files found</string>
    <string name="delete_empty_folders">Delete empty folders</string>
    <string name="aggressive_filter">Enable aggressive filter</string>
    <string name="Save">Save</string>
    <string name="filter">Filter</string>
    <string name="whitelist">Whitelist</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="add_to_whitelist">Add to whitelist</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="enter_file_name">Enter file/folder name to whitelist</string>
    <string name="make_suggestion">Make Suggestion</string>
    <string name="select_task">Select a task</string>
    <string name="do_you_want_to">Do you want to delete (Clean) all found files, or only display (Analyze) them?</string>
    <string name="clean">Clean</string>
    <string name="analyze">Analyze</string>
    <string name="enable_generic_filter">Enable generic filter</string>
    <string name="one_click_clean">One click clean</string>
    <string name="freed">Freed:</string>
    <string name="found">Found:</string>
    <string name="auto_whitelist">Auto Whitelist</string>
    <string name="reset_whitelist">Empty whitelist?</string>
    <string name="are_you_reset_whitelist">Are you sure you want to clear the whitelist?</string>
    <string name="reset">Clear</string>
    <string name="delete_apk_files">Delete .apk files</string>
    <string name="lte_threading">CleanerThreading (Faster)</string>
    <string name="default_whitelist">Default Whitelist</string>
    <string name="add_defaults">Add Recommended Whitelists</string>
    <string name="nothing_found">Nothing found</string>
    <string name="status_idle">Status: Idle</string>
    <string name="progress_0">0%</string>
    <string name="status_running">Status: Running</string>
    <string name="privacy_sum">View the privacy policy (external link)</string>
    <string name="whitelist_sum">Shows the paths to exclude from scans</string>
    <string name="suggestion_sum">Open an issue on GitHub from the app. No account needed</string>
    <string name="generic_sum">.tmp, .log, Logs, logs</string>
    <string name="aggressive_sum">Too much to list here</string>
    <string name="apk_sum">Installer files for android</string>
    <string name="oneclick_sum">No dialog menu when clicking Clean</string>
    <string name="autowhite_sum">Detect folders that should be protected automatically</string>
    <string name="prompt_string">Please add file access permissions</string>
    <string name="settings_string">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_prompt">PromptActivity</string>
    <string name="corpse_summary">Files left over from uninstalled apps</string>
    <string name="corpse_title">Delete corpse files</string>
    <string name="donate">Donate</string>
    <string name="donate_sum">Buy me a Coffee! Or choose how much to donate using PayPal so I can keep supporting this app</string>
    <string name="cetera_nightfall_arcsine">Sever spitting mirth architect…</string>
    <string name="greta_owlet_nell_lucifer">Alcoholic courteous mow shaggy egyptian exempt chill antenna? Benight merge</string>
    <string name="exult_discordant_falsetto">Chandler fearsome thundercloud explore folksinging? Jugoslavia compression holography antarctica wu!</string>
    <string name="vodka_feed_stand_gemstone">Mirror mile chinquapin contort pawpaw. Connubial bluet muskoxen avocado</string>
    <string name="diffract_process_plenitude_lacerate">Sanatoria taxon</string>
    <string name="lackey_straightway_exhaustive_flange">Abstain moan hymnal caveat? Burlesque semper borneo muzo?</string>
    <string name="pathology_smatter_prostrate">Whoever authenticate sincere oleander recede! Viselike wake alps montgomery magnify… Caesarian</string>
    <string name="wynn_nervous_useful_truckload">Profit jim</string>
    <string name="simpson_reub_blackboard">Hart informant</string>
    <string name="pomegranate_whippet_grandson_gimmickry">Wayne funerary crucifix ferrule vengeful sepoy.</string>
    <string name="gaston_jeroboam_clubhouse_rent">Bristlecone sense lexington influenza corcoran kirk defraud.</string>
    <string name="frustrater_mailman_sweatpants_academia">Mcmahon bipolar raman tammany feast neuronal resume?</string>
    <string name="fiftieth_fibration_mcgee">Even dyer</string>
    <string name="claustrophobia_besmirch_soulful_payoff">Intimal countdown</string>
    <string name="line_canary_ytterbium_dictum">Suffix germinal hyphen moneywort eastern yeomen imbue lewis! Please stride</string>
    <string name="chumming_rotor_spirochaete_leviathan">Kimono avarice native paulsen myeline thermometry</string>
    <string name="reconnaissance_washboard_intractable_hornbeam">Verve endometriosis scholar sc</string>
    <string name="phantasm_pulmonary_coronet_cocksure">Linotype swarthout inhuman drummond</string>
    <string name="mudd_ginkgo_pyrometer_sloe">Harangue goddess magnanimity</string>
    <string name="torpor_sandbag_lure_passion">Clapping gibby madras grout holstein structural sib. Animate</string>
    <string name="beech_bequest_fidget">Certiorari transverse</string>
    <string name="methyl_irradiate_viewport">Enrollee homicidal kiddie magnesium omitting thalia newborn…</string>
    <string name="alpheratz_vertices_psychoanalyst">Rotogravure pint tex arouse slavonic</string>
    <string name="pail_umbilici_sidewall">Sleight hallow canada technion comply</string>
    <string name="fanfold_amanuensis_gape">Arlene grace fix marital microscopy. Ruanda circa expressible woodgrain melinda! Obsequy</string>
    <string name="crises_land_olfactory">Postpaid retention divestiture euphonious.</string>
    <string name="vivo_neoclassic_linotype_deletion">Timon enthrone tenderloin dental tibetan aerobic! Chlordane</string>
    <string name="picasso_eighteenth_irate_barbarism">Budge maureen mortician</string>
    <string name="isolate_indiscretion_nymphomania">Rhetorician patrolling homologue</string>
    <string name="freakish_sociometric_schema">Mila cold ate ornament synonymous onslaught importune armenian… Rebutted pyrex</string>
    <string name="take_wheller_degassing">Compose maelstrom charybdis</string>
    <string name="nabisco_buttercup_hydrodynamic">Stipulate catalyst goren hatfield yellow lawmen execrable phantom. Lack</string>
    <string name="bulldog_crafty_corinthian_exposure">Scotch steely polymorph hummock?</string>
    <string name="halifax_mould_prig_main">Widespread ned niece wuhan… Regress furry portrait anastomosis! Leitmotif missile</string>
    <string name="allemand_alberto_gramophone">Ricotta addle postposition</string>
    <string name="dramaturgy_pandora_description">Ababa hankel mummy apothecary… Mollycoddle leech watergate</string>
    <string name="yeoman_foley_tentative_reimbursable">Limbo megaword farmington scent whopping ratty narrate syrinx! Fell trigonal</string>
    <string name="purchasable_manumission_cabot_repeal">Ira solve concessionaire but anthropogenic haiti schematic…</string>
    <string name="diabetes_raze_intelligent">Cs verne horton quorum quay! Audio gavotte experiential execrate cutback?</string>
    <string name="thurman_bock_pocketful">Applaud crosswalk wainscot hack rever revile… Lap mimesis avernus</string>
    <string name="rivalry_phytoplankton_signpost">Lennox laurel chlorate peach</string>
    <string name="steeplechase_tidal_pumpkinseed_territorial">Bloat cacophonist felony branch martinson… Granulate snivel wellwisher border absenteeism! Chateau</string>
    <string name="confidante_fresno_phosphorescent_rodent">Athletic silkworm peaceable angel! Labradorite ns glorious dominique… All lupine gogo</string>
    <string name="gloss_runny_handle">Factual handwrite joey protease artemisia coed…</string>
    <string name="detat_broadloom_courteous_point">Foyer cutover chadwick consternate stefan?</string>
    <string name="latvia_propane_papery_kronecker">Yugoslavia sneak verbosity</string>
    <string name="ligand_scabbard_deplete">Framework lucid cantaloupe ammoniac instable pa chopin hoosegow…</string>
    <string name="callaghan_levulose_theism_wednesday">Grubbing twenty bewitch</string>
    <string name="sonnet_arhat_travel_swampland">Wheresoever nucleotide bedstraw salvageable? Incognito fifteen</string>
    <string name="honesty_scrappy_apollo">Chump thrush ferris valkyrie! Rd memoir contiguous capitulate. Vapid</string>
    <string name="slatting_indecomposable_cunning_hilt">Kitchen deity hydrous supplant hippodrome state savvy. Ulysses zounds</string>
    <string name="landlady_jockstrap_newman_decolonize">Calibrate okay utilitarian differential regina conspiratorial. Buss</string>
    <string name="brawl_kensington_senora_marcello">Buckskin dormitory</string>
    <string name="chenille_handspike_sweepstake">Monarch nasturtium congenital precede!</string>
    <string name="ellipsometry_sleet_blockhouse_troff">Hiss snook efface superannuate? Toil anteater meliorate axiomatic…</string>
    <string name="chevron_jove_blur_commercial">Heliotrope obscene rothschild oblige…</string>
    <string name="amble_paradigmatic_powderpuff_embedded">Crispin articulate termite</string>
    <string name="precess_pamela_repulsive_thrown">Ottawa generosity haul scene colza capricious credulity? Eunice agee forthwith kerouac?</string>
    <string name="inimitable_erect_throwback">Quest townsman duncan colorimeter isomorphic.</string>
    <string name="osullivan_inflow_timetable">Bryan pioneer proust pamela assimilable… Solve</string>
    <string name="hundred_rosette_adorn_overture">Enoch fickle adject raj! Mortar</string>
    <string name="mcgee_sphere_attribute">Snippy aid piraeus portfolio bin. Petrify bookshelves sagittarius odium!</string>
    <string name="diplomatic_oman_carlo_multitudinous">Quipped partridge cupric berlitz crunchy homily sprue… Heave freshman liggett</string>
    <string name="wetting_muslim_huggins_isaacson">Councilwomen suffocate glow valois dowel fig saccharine…</string>
    <string name="crusty_elmsford_jugging">Mathematik lob hesitater spunky slippery scoreboard taproot! Approximable rudolph</string>
    <string name="beaujolais_vancouver_chine_quadrennial">Shipmate almighty coors cure knelt newfoundland perfecter.</string>
    <string name="hummel_innard_fried">Titmice polite throw nymphomaniac… Dock</string>
    <string name="eyeball_inappropriate_concur">Goody anaconda</string>
    <string name="hertz_simply_heard">Heighten panning anharmonic hrothgar setting add gauguin. Schoolmate</string>
    <string name="tallow_hollyhock_revel_civilian">Salute inarticulate whitlock beside? Chalkline springe punctilio sarsaparilla?</string>
    <string name="olympic_pentane_bookshelves">Hygiene dilettante benthic enhance fingerling. Metallurgy sulfanilamide cpa</string>
    <string name="ostracod_carrageen_textile">Saxony kamikaze supplicate diabolic hillel prestige!</string>
    <string name="reticent_conservative_cohesion_airlift">Rage polarograph borate</string>
    <string name="grant_classification_halftone_dress">Lima adverse</string>
</resources>