<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="settings"
    android:title="Settings"
    app:iconSpaceReserved="false">

    <Preference
        android:key="privacyPolicy"
        android:summary="@string/privacy_sum"
        android:title="@string/privacy_policy"
        app:iconSpaceReserved="false">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://www.fulldive.com/privacy-policy" />
    </Preference>

    <Preference
        android:key="whitelist"
        android:summary="@string/whitelist_sum"
        android:title="@string/whitelist"
        app:iconSpaceReserved="false">
        <intent android:action="whitelist" />
    </Preference>

    <PreferenceCategory
        android:title="Filters"
        app:iconSpaceReserved="false">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="generic"
            android:persistent="true"
            android:summary="@string/generic_sum"
            android:textColor="#FFF"
            android:title="@string/enable_generic_filter"
            app:iconSpaceReserved="false" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="aggressive"
            android:persistent="true"
            android:summary="@string/aggressive_sum"
            android:textColor="#FFF"
            android:title="@string/aggressive_filter"
            app:iconSpaceReserved="false" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="empty"
            android:persistent="true"
            android:textColor="#FFF"
            android:title="@string/delete_empty_folders"
            app:iconSpaceReserved="false" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="corpse"
            android:persistent="true"
            android:summary="@string/corpse_summary"
            android:textColor="#FFF"
            android:title="@string/corpse_title"
            app:iconSpaceReserved="false" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="apk"
            android:persistent="true"
            android:summary="@string/apk_sum"
            android:textColor="#FFF"
            android:title="@string/delete_apk_files"
            app:iconSpaceReserved="false" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="auto_white"
            android:persistent="true"
            android:summary="@string/autowhite_sum"
            android:textColor="#FFF"
            android:title="@string/auto_whitelist"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Miscellaneous"
        app:iconSpaceReserved="false">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="one_click"
            android:persistent="true"
            android:summary="@string/oneclick_sum"
            android:textColor="#FFF"
            android:title="@string/one_click_clean"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>
