<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<!--
  ~  Copyright (c) 2021 FullDive
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
    <EditText android:hint="@string/reconnaissance_washboard_intractable_hornbeam" android:id="@+id/downspoutAdjectivalView" android:inputType="textVisiblePassword" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/flapping_flair_margin" android:layout_marginTop="@dimen/solidify_race_width" android:layout_width="match_parent" android:text="@string/mcgee_sphere_attribute" android:textColor="@color/shortfall_anthracnose_esmark" app:layout_constraintBottom_toTopOf="@id/drudgeryPrimaryLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout android:gravity="bottom" android:id="@+id/drudgeryPrimaryLayout" android:layout_height="wrap_content" android:layout_width="0dp" android:orientation="horizontal" app:layout_constraintBottom_toTopOf="@id/electricianView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/downspoutAdjectivalView">
        <EditText android:background="@color/pudding_sociometric_office" android:hint="@string/landlady_jockstrap_newman_decolonize" android:id="@+id/parklikeOrganView" android:inputType="textVisiblePassword" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/amble_paradigmatic_powderpuff_embedded" android:textColor="@color/clannish_francisco" android:textSize="@dimen/divestiture_bursty_textsize"/>
        <TextView android:background="#83B2B4" android:hint="@string/pathology_smatter_prostrate" android:id="@+id/abstractView" android:layout_height="wrap_content" android:layout_margin="48dp" android:layout_width="wrap_content" android:text="@string/reticent_conservative_cohesion_airlift" android:textColor="@color/tipsy_lawbreak_napoleon"/>
        <CheckBox android:background="#0D39D9DA" android:hint="@string/torpor_sandbag_lure_passion" android:id="@+id/serifDeluxeView" android:layout_height="match_parent" android:layout_marginEnd="@dimen/implementer_consternate" android:layout_marginStart="@dimen/turmoil_wartime_margin" android:layout_marginTop="@dimen/scribners_doom_margin" android:layout_width="wrap_content" android:text="@string/halifax_mould_prig_main" android:textColor="@color/circumscribe_turbinate"/>
        <Button android:background="@color/ntis_stressful" android:hint="@string/hertz_simply_heard" android:id="@+id/choreographyHomeopathicView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/precess_pamela_repulsive_thrown" android:textColor="@color/unesco_eyeful_ireland"/>
        <CheckBox android:background="@color/cord_trimester" android:hint="@string/purchasable_manumission_cabot_repeal" android:id="@+id/wrongfulView" android:layout_height="match_parent" android:layout_width="wrap_content" android:paddingTop="@dimen/motivate_alton_size" android:text="@string/phantasm_pulmonary_coronet_cocksure"/>
        <Button android:hint="@string/slatting_indecomposable_cunning_hilt" android:id="@+id/epilepticAnnuliView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingEnd="@dimen/insomniac_coiffure_padding" android:paddingStart="@dimen/avocet_collaborate_size" android:paddingTop="@dimen/galway_matisse_size" android:text="@string/steeplechase_tidal_pumpkinseed_territorial" android:textColor="#2C6254D2"/>
        <LinearLayout android:gravity="start" android:id="@+id/roofZagrebLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="vertical" android:padding="@dimen/trapezoid_saccade_width">
            <CheckedTextView android:background="@color/banbury_deliverymen" android:hint="@string/latvia_propane_papery_kronecker" android:id="@+id/vulturelikeCalcuttaView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/crusty_elmsford_jugging" android:textColor="@color/marianne_hardtack_krebs"/>
            <AutoCompleteTextView android:background="#636706" android:hint="@string/beech_bequest_fidget" android:id="@+id/barrowView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/beaujolais_vancouver_chine_quadrennial" android:textColor="@color/mockery_pittsburgh" android:textSize="@dimen/impermeable_spumoni_textsize"/>
            <EditText android:background="@color/unesco_eyeful_ireland" android:hint="@string/gloss_runny_handle" android:id="@+id/terpsichoreanChecksumView" android:inputType="textVisiblePassword" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/fiftieth_fibration_mcgee" android:textColor="@color/protein_mort"/>
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/compassionLayout" android:layout_height="wrap_content" android:layout_width="match_parent">
                <EditText android:background="@color/intrude_tibet_pamela" android:hint="@string/detat_broadloom_courteous_point" android:id="@+id/increaseView" android:inputType="phone" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/methyl_irradiate_viewport" android:textColor="@color/redound_buttock" android:textSize="@dimen/artillery_reactant_textsize" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <EditText android:background="@color/combatted_hush" android:hint="@string/grant_classification_halftone_dress" android:id="@+id/electrophorusWatertownView" android:inputType="phone" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingBottom="@dimen/sacrament_gabbro_margin" android:text="@string/hummel_innard_fried" android:textSize="@dimen/labrador_bernardo_textsize"/>
            <TextView android:background="#40302D" android:hint="@string/vivo_neoclassic_linotype_deletion" android:id="@+id/ploverView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/thurman_bock_pocketful" android:textColor="@color/cranky_save" android:textSize="24sp"/>
            <CheckBox android:background="@color/heighten_flabby_congestion" android:hint="@string/yeoman_foley_tentative_reimbursable" android:id="@+id/richCatatonicView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/claustrophobia_besmirch_soulful_payoff" android:textColor="@color/firehouse_wouldnt"/>
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:id="@+id/musicLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="horizontal">
            <LinearLayout android:gravity="top|center_vertical" android:id="@+id/chateauRsvpLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="horizontal">
                <Button android:hint="@string/olympic_pentane_bookshelves" android:id="@+id/paraphernaliaView" android:layout_height="match_parent" android:layout_width="wrap_content" android:paddingEnd="@dimen/dispensary_amethyst_height" android:paddingStart="12dp" android:paddingTop="@dimen/kamchatka_sugary_padding" android:text="@string/chevron_jove_blur_commercial" android:textSize="@dimen/envoy_devil_textsize"/>
            </LinearLayout>
            <CheckedTextView android:background="@color/calla_perspicuous" android:hint="@string/eyeball_inappropriate_concur" android:id="@+id/popularPrefabView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingBottom="@dimen/schizophrenic_ieee_padding" android:paddingEnd="@dimen/spade_insuperable_height" android:paddingStart="28dp" android:paddingTop="@dimen/buckskin_garrison_margin" android:text="@string/dramaturgy_pandora_description" android:textColor="@color/reflectance_constitute_inappropriate"/>
            <TextView android:hint="@string/bulldog_crafty_corinthian_exposure" android:id="@+id/vorticesView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/diplomatic_oman_carlo_multitudinous" android:textColor="#D64C1E"/>
            <EditText android:hint="@string/lackey_straightway_exhaustive_flange" android:id="@+id/countryView" android:inputType="text" android:layout_height="wrap_content" android:layout_margin="@dimen/grove_deserve_margin" android:layout_width="wrap_content" android:text="@string/pail_umbilici_sidewall" android:textColor="#D7622B16"/>
        </LinearLayout>
        <Button android:background="#8FD8BAEE" android:hint="@string/diabetes_raze_intelligent" android:id="@+id/spragueView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingBottom="@dimen/conformal_impend_margin" android:paddingEnd="@dimen/serbia_cheeky_margin" android:paddingStart="@dimen/checkerboard_abrasive_size" android:paddingTop="@dimen/lung_confidant_padding" android:text="@string/tallow_hollyhock_revel_civilian" android:textColor="@color/mausoleum_psychophysiology"/>
        <AutoCompleteTextView android:hint="@string/mudd_ginkgo_pyrometer_sloe" android:id="@+id/hymnView" android:layout_height="wrap_content" android:layout_margin="@dimen/moline_magma_size" android:layout_width="wrap_content" android:paddingBottom="@dimen/climatic_colossus" android:paddingEnd="12dp" android:paddingStart="@dimen/liqueur_botulism_padding" android:text="@string/diffract_process_plenitude_lacerate"/>
        <EditText android:background="@color/cattail_adirondack" android:hint="@string/line_canary_ytterbium_dictum" android:id="@+id/gangplankDecorateView" android:inputType="textPassword" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/rivalry_phytoplankton_signpost"/>
        <CheckBox android:background="#FBF2A01B" android:hint="@string/simpson_reub_blackboard" android:id="@+id/giovanniShriekView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/pomegranate_whippet_grandson_gimmickry" android:textColor="@color/anemone_draconian_fragment"/>
        <TextView android:background="#77BB3395" android:hint="@string/greta_owlet_nell_lucifer" android:id="@+id/ivanAbsorbentView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/nabisco_buttercup_hydrodynamic" android:textSize="28sp"/>
    </LinearLayout>
    <TextView android:background="@color/waxy_arctangent_stale" android:hint="@string/confidante_fresno_phosphorescent_rodent" android:id="@+id/electricianView" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/moluccas_bizarre_margin" android:layout_width="@dimen/worldwide_expire_height" android:text="@string/isolate_indiscretion_nymphomania" android:textColor="#487361" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/drudgeryPrimaryLayout"/>
</androidx.constraintlayout.widget.ConstraintLayout>
