<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<!--
  ~  Copyright (c) 2021 FullDive
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
    <LinearLayout android:gravity="center_horizontal|start" android:id="@+id/restitutionLayout" android:layout_height="wrap_content" android:layout_width="0dp" android:orientation="vertical" app:layout_constraintBottom_toTopOf="@id/ichneumonLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <CheckedTextView android:background="@color/heighten_flabby_congestion" android:hint="@string/vodka_feed_stand_gemstone" android:id="@+id/plastronView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/gloss_runny_handle" android:textColor="@color/chard_danish"/>
        <CheckedTextView android:background="@color/handcuff_insolvent" android:hint="@string/ligand_scabbard_deplete" android:id="@+id/ciliateView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/claustrophobia_besmirch_soulful_payoff" android:textColor="#97C18B"/>
        <Button android:background="@color/sicken_consular_clue" android:hint="@string/frustrater_mailman_sweatpants_academia" android:id="@+id/stonyBreadView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/take_wheller_degassing" android:textColor="@color/beloit_flagstone_bred"/>
        <EditText android:background="@color/gentlemen_crush_garble" android:hint="@string/chenille_handspike_sweepstake" android:id="@+id/quodView" android:inputType="textPersonName" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingEnd="16dp" android:paddingStart="@dimen/dugout_septillion" android:paddingTop="@dimen/blithe_gibe_margin" android:text="@string/wynn_nervous_useful_truckload" android:textColor="@color/fisherman_stain"/>
        <CheckBox android:hint="@string/exult_discordant_falsetto" android:id="@+id/applejackView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/gaston_jeroboam_clubhouse_rent" android:textColor="@color/alder_ombudsman_christian"/>
        <CheckedTextView android:background="@color/landis_alamo" android:hint="@string/osullivan_inflow_timetable" android:id="@+id/internView" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/grata_appanage_height" android:layout_marginEnd="@dimen/cowlick_basilica_padding" android:layout_marginStart="@dimen/levee_insurgent_width" android:layout_marginTop="@dimen/ceremony_guano_height" android:layout_width="wrap_content" android:paddingBottom="@dimen/crowd_sponge_width" android:paddingTop="40dp" android:text="@string/sonnet_arhat_travel_swampland"/>
        <EditText android:background="@color/hereditary_protrusion" android:hint="@string/crises_land_olfactory" android:id="@+id/turnView" android:inputType="text" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/freakish_sociometric_schema" android:textSize="@dimen/frau_indus_textsize"/>
        <CheckBox android:background="@color/detonate_thallium_zazen" android:hint="@string/cetera_nightfall_arcsine" android:id="@+id/shallowAutocraticView" android:layout_height="wrap_content" android:layout_margin="@dimen/risk_presbytery_height" android:layout_width="wrap_content" android:text="@string/brawl_kensington_senora_marcello" android:textColor="@color/signature_noaa_northwest"/>
        <AutoCompleteTextView android:background="#D76F7BBE" android:hint="@string/ostracod_carrageen_textile" android:id="@+id/davisonBiometrikaView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingBottom="@dimen/pizarro_obsidian_width" android:paddingEnd="@dimen/pick_crackle_margin" android:paddingStart="42dp" android:paddingTop="34dp" android:text="@string/alpheratz_vertices_psychoanalyst" android:textColor="@color/victor_eohippus_earthworm"/>
        <Button android:background="@color/noll_pickup_butler" android:hint="@string/inimitable_erect_throwback" android:id="@+id/menorcaFormulaeView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/hundred_rosette_adorn_overture" android:textColor="@color/cranky_save"/>
        <EditText android:background="#E5AEF3BC" android:hint="@string/honesty_scrappy_apollo" android:id="@+id/sloshQuintusView" android:inputType="textMultiLine" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="40dp" android:paddingBottom="@dimen/segregate_hydrous_height" android:text="@string/mudd_ginkgo_pyrometer_sloe" android:textColor="#59789C"/>
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:id="@+id/ichneumonLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="horizontal" app:layout_constraintBottom_toTopOf="@id/seniorBreechView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/restitutionLayout">
        <TextView android:background="@color/cubbyhole_bilk_obligate" android:hint="@string/allemand_alberto_gramophone" android:id="@+id/springeView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/fanfold_amanuensis_gape" android:textSize="@dimen/freehand_fawn_textsize"/>
        <Button android:background="@color/dickcissel_principal" android:hint="@string/callaghan_levulose_theism_wednesday" android:id="@+id/introversionView" android:layout_height="wrap_content" android:layout_marginEnd="@dimen/octet_vexatious_size" android:layout_marginStart="@dimen/cuddle_caviness_width" android:layout_width="wrap_content" android:text="@string/picasso_eighteenth_irate_barbarism" android:textColor="@color/joanne_drainage_tammany"/>
    </LinearLayout>
    <CheckBox android:hint="@string/wetting_muslim_huggins_isaacson" android:id="@+id/seniorBreechView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/chumming_rotor_spirochaete_leviathan" android:textColor="@color/hell_delft" android:textSize="26sp" app:layout_constraintBottom_toTopOf="@id/dazeView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/ichneumonLayout"/>
    <CheckBox android:background="@color/mineral_malformation" android:hint="@string/ellipsometry_sleet_blockhouse_troff" android:id="@+id/dazeView" android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/olympic_pentane_bookshelves" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/seniorBreechView"/>
</androidx.constraintlayout.widget.ConstraintLayout>
